--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <body onload='ready()'>
 
   <h3>Hello World!</h3>
-  <iframe id='iframe3' srcdoc="QUESTION">
-  </iframe>
-  <div id=run_button_cointainer><button id=run_button>Run</button></div>
+
+  <button id=run_button>Run</button>
+  <button id="button1">Load Question</button>
+  <button id="button2">Load Answer</button>
 
   <div id='container'>
 
@@ -23,6 +24,10 @@
     </div>
     <div id="editor2">
     </div>
+
+    <textarea id='myTextarea' rows="35" cols="23">
+      Code Answer
+    </textarea>
 
     <iframe id='iframe' srcdoc="FACE">
     </iframe>
