--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body onload='ready()'>
 
-  <h3>Hello World!</h3>
+  <h3>Exercise 1: Add two numbers</h3>
 
   <button id=run_button>Run</button>
   <button id="button1">Load Question</button>
@@ -33,6 +33,7 @@
     </iframe>
     <iframe id='iframe2' srcdoc="Hello">
     </iframe>
+
   </div>
   <script src="script.js"></script>
 </body>
