--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Code Challenge</title>
 </head>
 
 <body onload='ready()'>
 
-  <h3>Exercise 1: Add two numbers</h3>
+  <h2>Exercise 1: Add two numbers</h2>
 
   <button id=run_button>Run</button>
-  <button id="button1">Load Question</button>
-  <button id="button2">Load Answer</button>
+  <button id=btn-auto>Auto: on</button>
+  <button id="btn-answer">Load Answer</button>
 
   <div id='container'>
 
@@ -25,13 +25,13 @@
     <div id="editor2">
     </div>
 
-    <textarea id='myTextarea' rows="35" cols="23">
+    <textarea id='myTextarea' rows="35" cols="23" readonly>
       Code Answer
     </textarea>
 
     <iframe id='iframe' srcdoc="FACE">
     </iframe>
-    <iframe id='iframe2' srcdoc="Hello">
+    <iframe id='iframe2' srcdoc="Click Run button">
     </iframe>
 
   </div>
