--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body onload='ready()'>
 
-  <h2>Exercise 1: Add two numbers</h2>
+  <h2>Exercise 11: Title Case a Sentence</h2>
 
   <button id=run_button>Run</button>
   <button id=btn-auto>Auto: on</button>
@@ -24,6 +24,8 @@
     </div>
     <div id="editor2">
     </div>
+    <div id="editor3">
+    </div>
 
     <textarea id='myTextarea' rows="35" cols="23" readonly>
       Code Answer
@@ -31,7 +33,10 @@
 
     <iframe id='iframe' srcdoc="FACE">
     </iframe>
-    <iframe id='iframe2' srcdoc="Click Run button">
+    <iframe id='iframe2' scrolling="no" srcdoc="Click Run button">
+    </iframe>
+
+    <iframe id='iframe3' scrolling="no" srcdoc="Hello World">
     </iframe>
 
   </div>
