--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <button id=run_button>Run</button>
   <button id=btn-auto>Auto: on</button>
-  <button id="btn-answer">Load Answer</button>
+  <button id="btn-answer">Show Answer</button>
 
   <div id='container'>
 
