--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 
 <body onload='ready()'>
 
-  <h2>Exercise 11: Title Case a Sentence</h2>
+  <div id='header'>
 
-  <button id=run_button>Run</button>
-  <button id=btn-auto>Auto: on</button>
-  <button id="btn-answer">Show Answer</button>
+    <button id=run_button>Run</button>
+    <button id=btn-auto>Auto: on</button>
+    <button id="btn-answer">Show Answer</button>
+    <h2 id='text'>....</h2>
+    <h2>Exercise 11: Title Case a Sentence</h2>
+
+  </div>
 
   <div id='container'>
 
