include hompage links

--- a/index.html
+++ b/index.html
@@ -1,48 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
 
 <head>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/ace/1.2.9/ace.js'></script>
   <link rel="stylesheet" href="style.css">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- <a href="index.html">Home</a> -->
   <title>Code Challenge</title>
 </head>
 
-<!-- <body onload='ready()'> -->
+<body>
 
-<div id='header'>
+  <h1>CODE CHALLENGE: Free Code Academy</h1>
+  <div id="container">
 
-  <button id=run_button>Run</button>
-  <button id=btn-auto>Auto: on</button>
-  <button id="btn-answer">Show Answer</button>
-  <h2 id="title">Exercise: Title goes here!</h2>
+    <h2>
+      <a href="./FCA2-ReverseString/index.html">FCA2-Reverse a String</a>
+    </h2>
 
-</div>
+    <h2>
+      <a href="./FCA3-FactorializeNumber/index.html">FCA3-Factorialize a Number</a>
+    </h2>
 
-<div id='container'>
+    <h2>
+      <a href="./FCA4-FindLongestWordString/index.html">FCA4-Finding the Longest Word in a String</a>
+    </h2>
 
-  <div id="editor">
+    <h2>
+      <a href="./FCA6-ConfirmEnding/index.html">FCA6-Confirm Ending</a>
+    </h2>
+
+    <h2>
+      <a href="./FCA7-RepeatString/index.html">FCA7-Repeat a String</a>
+    </h2>
+
+    <h2>
+      <a href="./FCA11-TitleCase/index.html">FCA11-Title Case a Sentense</a>
+    </h2>
+
+    <h2>
+      <a href="./Arrays-AddRemoveItems/">Arrays Add Remove Items</a>
+    </h2>
+
   </div>
-  <div id="editor2">
-  </div>
-  <div id="editor3">
-  </div>
-
-  <textarea id='myTextarea' rows="35" cols="23" readonly>
-      Code Answer
-    </textarea>
-
-  <iframe id='iframe' srcdoc="FACE">
-  </iframe>
-  <iframe id='iframe2' scrolling="no" srcdoc="Click Run button">
-  </iframe>
-
-</div>
-
-<script src="variables.js"></script>
-<script src="script.js"></script>
 </body>
 
 </html>
