--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
 </head>
 
 <body>
+  <h1 id="heading">CODE CHALLENGE: Free Code Academy</h1>
 
-  <h1>CODE CHALLENGE: Free Code Academy</h1>
   <div id="container">
 
+    <h2 id="sub-heading">Basic Data Structure</h2>
+    <h2>
+      <a href="./Arrays-AddRemoveItems/index.html">Arrays Add Remove Items</a>
+    </h2>
+
+    <h2 id="sub-heading">Basic Algorithm Scripting</h2>
     <h2>
       <a href="./FCA2-ReverseString/index.html">FCA2-Reverse a String</a>
     </h2>
@@ -33,10 +39,6 @@
 
     <h2>
       <a href="./FCA11-TitleCase/index.html">FCA11-Title Case a Sentense</a>
-    </h2>
-
-    <h2>
-      <a href="./Arrays-AddRemoveItems/">Arrays Add Remove Items</a>
     </h2>
 
   </div>
