update to log9. join() now test arrays

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <h2 id="sub-heading">Basic Data Structure</h2>
     <h2>
-      <a href="./Arrays-AddRemoveItems/index.html">Arrays Add Remove Items</a>
+      <a href="./Arrays-AddRemoveItems/">Arrays Add Remove Items</a>
     </h2>
 
     <h2 id="sub-heading">Basic Algorithm Scripting</h2>
