--- a/FCA3-FactorializeNumber/index.html
+++ b/FCA3-FactorializeNumber/index.html
@@ -36,7 +36,7 @@
 
   <iframe id='iframe' srcdoc="FACE">
   </iframe>
-  <iframe id='iframe2' scrolling="no" srcdoc="Click Run button">
+  <iframe id='iframe2' srcdoc="Click Run button">
   </iframe>
 
 </div>
