--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <link rel="stylesheet" href="style.css">
   <!-- <a href="index.html">Home</a> -->
+  <link href="https://fonts.googleapis.com/css?family=Red+Hat+Text&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Salsa&display=swap" rel="stylesheet">
   <title>Code Challenge</title>
 </head>
 
@@ -13,7 +15,10 @@
 
     <h2 id="sub-heading">Basic Data Structure</h2>
     <h2>
-      <a href="./Arrays-AddRemoveItems/">Arrays Add Remove Items</a>
+      <a href="./BDS3-Arrays-AddRemoveItems/">BDS3-Arrays Add Remove Items</a>
+    </h2>
+    <h2>
+      <a href="./BDS4-Arrays-AddRemoveItems2/">BDS4-Arrays Add Remove Items2</a>
     </h2>
 
     <h2 id="sub-heading">Basic Algorithm Scripting</h2>
