update folder names FCA to BAS

--- a/index.html
+++ b/index.html
@@ -23,27 +23,27 @@
 
     <h2 id="sub-heading">Basic Algorithm Scripting</h2>
     <h2>
-      <a href="./FCA2-ReverseString/index.html">FCA2-Reverse a String</a>
+      <a href="./BAS2-ReverseString/index.html">BAS2-Reverse a String</a>
     </h2>
 
     <h2>
-      <a href="./FCA3-FactorializeNumber/index.html">FCA3-Factorialize a Number</a>
+      <a href="./BAS3-FactorializeNumber/index.html">BAS3-Factorialize a Number</a>
     </h2>
 
     <h2>
-      <a href="./FCA4-FindLongestWordString/index.html">FCA4-Finding the Longest Word in a String</a>
+      <a href="./BAS4-FindLongestWordString/index.html">BAS4-Finding the Longest Word in a String</a>
     </h2>
 
     <h2>
-      <a href="./FCA6-ConfirmEnding/index.html">FCA6-Confirm Ending</a>
+      <a href="./BAS6-ConfirmEnding/index.html">BAS6-Confirm Ending</a>
     </h2>
 
     <h2>
-      <a href="./FCA7-RepeatString/index.html">FCA7-Repeat a String</a>
+      <a href="./BAS7-RepeatString/index.html">BAS7-Repeat a String</a>
     </h2>
 
     <h2>
-      <a href="./FCA11-TitleCase/index.html">FCA11-Title Case a Sentense</a>
+      <a href="./BAS11-TitleCase/index.html">BAS11-Title Case a Sentense</a>
     </h2>
 
   </div>
