added BDS5 splice method

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <h2>
       <a href="./BDS4-Arrays-AddRemoveItems2/">BDS4-Arrays Add Remove Items2</a>
     </h2>
+    <h2>
+      <a href="./BDS5-The-Splice-Method/">BDS5-The Splice Method</a>
+    </h2>
 
     <h2 id="sub-heading">Basic Algorithm Scripting</h2>
     <h2>
