--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <h2>
       <a href="./BDS5-The-Splice-Method/">BDS5-The Splice Method</a>
     </h2>
+    <h2>
+      <a href="./BDS7-The-Slice-Method/">BDS7-The Slice Method</a>
+    </h2>
 
     <h2 id="sub-heading">Basic Algorithm Scripting</h2>
     <h2>
