--- a/BDS3-Arrays-AddRemoveItems/index.html
+++ b/BDS3-Arrays-AddRemoveItems/index.html
@@ -16,6 +16,7 @@
 
   <button id=run_button>Run</button>
   <button id=btn-auto>Auto: on</button>
+  <button id="btn-output">Expand Output</button>
   <button id="btn-answer">Show Answer</button>
   <h2 id="title">Exercise: Title goes here!</h2>
 
