--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <h2>
       <a href="./BDS7-The-Slice-Method/">BDS7-The Slice Method</a>
     </h2>
+    <h2>
+      <a href="./BDS10-Check-For-Element/">BDS10-Check For Element</a>
+    </h2>
 
     <h2 id="sub-heading">Basic Algorithm Scripting</h2>
     <h2>
