added challege: Modify Object

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <h2>
       <a href="./BDS10-Check-For-Element/">BDS10-Check For Element</a>
     </h2>
+    <h2>
+      <a href="./BDS20-Modify-Object/">BDS20-Modify Object</a>
+    </h2>
 
     <h2 id="sub-heading">Basic Algorithm Scripting</h2>
     <h2>
