--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <a href="./BDS10-Check-For-Element/">BDS10-Check For Element</a>
     </h2>
     <h2>
-      <a href="./BDS20-Modify-Object/">BDS20-Modify Object</a>
+      <a href="./BDS20-Modify-Array-In-Object/">BDS20-Modify Array in Object</a>
     </h2>
 
     <h2 id="sub-heading">Basic Algorithm Scripting</h2>
