New: BSA9 Finders Keepers

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
     <h2>
       <a href="./BAS7-RepeatString/index.html">BAS7-Repeat a String</a>
     </h2>
+    <h2>
+      <a href="./BAS9-FindersKeepers/index.html">BAS9-Finders Keepers</a>
+    </h2>
 
     <h2>
       <a href="./BAS11-TitleCase/index.html">BAS11-Title Case a Sentense</a>
