--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
     <h2>
       <a href="./BAS7-RepeatString/index.html">BAS7-Repeat a String</a>
     </h2>
+
     <h2>
       <a href="./BAS9-FindersKeepers/index.html">BAS9-Finders Keepers</a>
+    </h2>
+
+    <h2>
+      <a href="./BAS12-SliceSplice/index.html">BAS12-Slice and Splice</a>
     </h2>
 
     <h2>
