update: .html .css

--- a/index.html
+++ b/index.html
@@ -12,63 +12,94 @@
   <h1 id="heading">CODE CHALLENGE: Free Code Academy</h1>
 
   <div id="container">
+    <header>
+      <h2 id="sub-heading">Basic Data Structure</h2>
+      <h2>
+        <a href="./BDS3-Arrays-AddRemoveItems/">BDS3-Arrays Add Remove Items</a>
+      </h2>
+      <h2>
+        <a href="./BDS4-Arrays-AddRemoveItems2/">BDS4-Arrays Add Remove Items2</a>
+      </h2>
+      <h2>
+        <a href="./BDS5-The-Splice-Method/">BDS5-The Splice Method</a>
+      </h2>
+      <h2>
+        <a href="./BDS7-The-Slice-Method/">BDS7-The Slice Method</a>
+      </h2>
+      <h2>
+        <a href="./BDS10-Check-For-Element/">BDS10-Check For Element</a>
+      </h2>
+      <h2>
+        <a href="./BDS20-Modify-Array-In-Object/">BDS20-Modify Array in Object</a>
+      </h2>
+    </header>
 
-    <h2 id="sub-heading">Basic Data Structure</h2>
-    <h2>
-      <a href="./BDS3-Arrays-AddRemoveItems/">BDS3-Arrays Add Remove Items</a>
-    </h2>
-    <h2>
-      <a href="./BDS4-Arrays-AddRemoveItems2/">BDS4-Arrays Add Remove Items2</a>
-    </h2>
-    <h2>
-      <a href="./BDS5-The-Splice-Method/">BDS5-The Splice Method</a>
-    </h2>
-    <h2>
-      <a href="./BDS7-The-Slice-Method/">BDS7-The Slice Method</a>
-    </h2>
-    <h2>
-      <a href="./BDS10-Check-For-Element/">BDS10-Check For Element</a>
-    </h2>
-    <h2>
-      <a href="./BDS20-Modify-Array-In-Object/">BDS20-Modify Array in Object</a>
-    </h2>
+    <header>
+      <h2 id="sub-heading">Basic Algorithm Scripting</h2>
+      <h2>
+        <a href="./BAS2-ReverseString/index.html">BAS2-Reverse a String</a>
+      </h2>
 
-    <h2 id="sub-heading">Basic Algorithm Scripting</h2>
-    <h2>
-      <a href="./BAS2-ReverseString/index.html">BAS2-Reverse a String</a>
-    </h2>
+      <h2>
+        <a href="./BAS3-FactorializeNumber/index.html">BAS3-Factorialize a Number</a>
+      </h2>
 
-    <h2>
-      <a href="./BAS3-FactorializeNumber/index.html">BAS3-Factorialize a Number</a>
-    </h2>
+      <h2>
+        <a href="./BAS4-FindLongestWordString/index.html">BAS4-Finding the Longest Word in a String</a>
+      </h2>
 
-    <h2>
-      <a href="./BAS4-FindLongestWordString/index.html">BAS4-Finding the Longest Word in a String</a>
-    </h2>
+      <h2>
+        <a href="./BAS6-ConfirmEnding/index.html">BAS6-Confirm Ending</a>
+      </h2>
 
-    <h2>
-      <a href="./BAS6-ConfirmEnding/index.html">BAS6-Confirm Ending</a>
-    </h2>
+      <h2>
+        <a href="./BAS7-RepeatString/index.html">BAS7-Repeat a String</a>
+      </h2>
 
-    <h2>
-      <a href="./BAS7-RepeatString/index.html">BAS7-Repeat a String</a>
-    </h2>
+      <h2>
+        <a href="./BAS9-FindersKeepers/index.html">BAS9-Finders Keepers</a>
+      </h2>
 
-    <h2>
-      <a href="./BAS9-FindersKeepers/index.html">BAS9-Finders Keepers</a>
-    </h2>
+      <h2>
+        <a href="./BAS12-SliceSplice/index.html">BAS12-Slice and Splice</a>
+      </h2>
 
-    <h2>
-      <a href="./BAS12-SliceSplice/index.html">BAS12-Slice and Splice</a>
-    </h2>
+      <h2>
+        <a href="./BAS13-FalsyBouncer/index.html">BAS13-Falsy Bouncer</a>
+      </h2>
 
-    <h2>
-      <a href="./BAS13-FalsyBouncer/index.html">BAS13-Falsy Bouncer</a>
-    </h2>
+      <h2>
+        <a href="./BAS11-TitleCase/index.html">BAS11-Title Case a Sentense</a>
+      </h2>
 
-    <h2>
-      <a href="./BAS11-TitleCase/index.html">BAS11-Title Case a Sentense</a>
-    </h2>
+    </header>
+
+    <header>
+
+      <h2 id="sub-heading">Custom Algorithm 1</h2>
+      <h2>
+        <a href="./BAS2-ReverseString/index.html">BAS2-Reverse a String</a>
+      </h2>
+
+      <h2>
+        <a href="./BAS4-FindLongestWordString/index.html">BAS4-Finding the Longest Word in a String</a>
+      </h2>
+
+    </header>
+
+    <header>
+
+      <h2 id="sub-heading">Custom Algorithm 2</h2>
+      <h2>
+        <a href="./BAS2-ReverseString/index.html">BAS2-Reverse a String</a>
+      </h2>
+
+      <h2>
+        <a href="./BAS4-FindLongestWordString/index.html">BAS4-Finding the Longest Word in a String</a>
+      </h2>
+
+    </header>
+
 
   </div>
 </body>
