BAS14 Where Do I Belong

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
       </h2>
 
       <h2>
+        <a href="./BAS14-WhereDoIBelong/index.html">BAS14-Where Do I Belong</a>
+      </h2>
+
+      <h2>
         <a href="./BAS11-TitleCase/index.html">BAS11-Title Case a Sentense</a>
       </h2>
 
