--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
       </h2>
 
       <h2>
+        <a href="./BAS11-TitleCase/index.html">BAS11-Title Case a Sentense</a>
+      </h2>
+
+      <h2>
         <a href="./BAS12-SliceSplice/index.html">BAS12-Slice and Splice</a>
       </h2>
 
@@ -73,8 +77,10 @@
       </h2>
 
       <h2>
-        <a href="./BAS11-TitleCase/index.html">BAS11-Title Case a Sentense</a>
+        <a href="./BAS15-Mutations/index.html">BAS15-Mutations</a>
       </h2>
+
+
 
     </header>
 
